Refactor the Cocoa Pasteboard Integration Up to the Chrome Find Bar Level

This allows Cocoa and Views to use the same pasteboard notification.
This does not hook up views Find Bar updates to the pasteboard.

BUG=826478,827189

Change-Id: I038fe4b3acb9e3884ca928d9cbc5106a1a324913
Reviewed-on: https://chromium-review.googlesource.com/1053548
Commit-Queue: Robert Liao <robliao@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557716}
Former-commit-id: 626e8f4e769a669f0060451d720b28a4a10310d9