chrome/browser/ui/cocoa/find_bar/find_bar_cocoa_controller.mm
@@ -89,11 +89,6 @@ const int kUndefinedResultCount = -1;
 - (id)initWithBrowser:(Browser*)browser {
   if ((self = [super initWithNibName:@"FindBar"
                               bundle:base::mac::FrameworkBundle()])) {
-    [[NSNotificationCenter defaultCenter]
-        addObserver:self
-           selector:@selector(findPboardUpdated:)
-               name:kFindPasteboardChangedNotification
-             object:[FindPasteboard sharedInstance]];
     browser_ = browser;
   }
   return self;
